--- a/index.html
+++ b/index.html
@@ -34,5 +34,7 @@
     <p id="result"></p>
 
     <script src="guess.js"></script>
+    <div class="back-button" onclick="window.history.back()" style="position: fixed; bottom: 20px; left: 50%; transform: translateX(-50%); padding: 10px 20px; background-color: #FFC0CB; color: #FFC0CB; text-decoration: none; border-radius: 5px;"><a href="#">Quay Lại</a>
+    </div>
 </body>
 </html>
